# Employee-app-backend

./: .pre-commit-config.yaml  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 46295f2d904d_init.py  65ab936fb849_adding_departments_table.py  cd083f92ac69_init.py  e41573b8ce70_init.py  f9c6b8d9c4df_adding_departments_table.py
auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
database/: __init__.py  connection.py
departments/: __init__.py  repo.py  router.py  schemas.py  service.py
employees/: __init__.py  repo.py  router.py  schemas.py  service.py
exceptions/: __init__.py  handlers.py
middleware/: __init__.py  logger.py
models/: __init__.py  address.py  department.py  employee.py  employee_department.py
tests/: conftest.py  test_auth_utils.py  test_employee_service.py  test_employee_service1.py  test_exception.py
